# monopolize

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  file_manager.rs  main.rs
src/api/: server.rs
src/errors/: error.rs  mod.rs
src/file_manager/: file_reader.rs  mod.rs
src/input/: cli.rs
src/merger/: arrow_schema_unifier.rs  file_manager.rs  mod.rs  schema_unifier.rs
src/modules/: file_manager.rs  mod.rs  schema_unifier.rs
src/querier/: mod.rs  query_engine.rs
src/schema/: extractor.rs  manager.rs  mod.rs  unifier.rs
