[package]
name = "monopolize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clap_derive = "4.5.8"
thiserror = "1.0.63"
parquet = "52.1.0"
arrow = "52.1.0"
url = "2.5.2"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
datafusion = "40.0.0"
object_store = "0.10.2"
